# answermydocs

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md
backend/: debug_rag.py  main.py  pyproject.toml  requirements.txt
backend/app/: auth.py  cache.py  config.py  db.py  limits.py  main.py  middleware.py  models.py  monitoring.py  security.py
backend/app/db/: __init__.py  client.py
backend/app/db/migrations/: 001_create_users.sql  002_create_documents.sql  003_create_workspaces.sql  004_create_conversations.sql  005_create_messages.sql  006_hnsw_index.sql  007_conversations_doc_fk_cascade.sql
backend/app/models/: schemas.py
backend/app/rag/: agent.py  grader.py  indexer.py  llm.py  retriever.py  rewriter.py  vectorstore.py
backend/app/routers/: auth.py  billing.py  chat.py  conversations.py  documents.py  sessions.py  upload.py  workspaces.py
backend/app/services/: auth.py  message_store.py  pdf_processor.py  session_manager.py  vectorstore.py
backend/tests/: test_api.py  test_cache.py  test_rag.py  test_security.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/dashboard/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/chat/: ChatPanel.tsx  CitationChip.tsx  MessageBubble.tsx  PDFViewer.tsx
frontend/components/documents/: DocumentCard.tsx  UploadZone.tsx
frontend/components/landing/: ComparisonTable.tsx  (+13 more)
frontend/lib/: api.ts  auth.ts
frontend/src/: auth.ts  proxy.ts
frontend/store/: useAuthStore.ts
(+20 files in other folders)
