[project]
name = "answermydocs"
version = "0.1.0"
description = "PDF chat SaaS — FastAPI + LangGraph + Supabase"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.20",

    # Settings and env
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",

    # Auth — JWT + bcrypt + Google ID-token verification
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=3.2.0,<4.0.0",
    "google-auth>=2.37.0",

    # Database — Supabase + psycopg3 for PGVector
    "supabase>=2.10.0",
    "psycopg[binary]>=3.2.0",

    # LangChain / LangGraph / LangSmith
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-experimental>=0.3.0",
    "langchain-postgres>=0.0.13",
    "langgraph>=0.2.60",
    "langsmith>=0.2.0",

    # PDF processing
    "pymupdf>=1.25.0",

    # Rate limiting
    "slowapi>=0.1.10",

    # File storage helpers
    "aiofiles>=24.1.0",

    # Billing
    "stripe>=12.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "gradio>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
